# PremierLeagueScraper

./: README.md  main.py  pyproject.toml
leaguescraper/: __init__.py
