[tool.poetry]
name = "premierleaguescraper"
version = "0.1.0"
description = "Permier League Scraper"
authors = ["YousefEZ <45167695+YousefEZ@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
